fix overflow issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,9 @@ body {
   .shader {
     position: relative;
     width: 100vw;
+    height: 100vh;
     pointer-events: none;
+    overflow: hidden;
 
     img {
       width: 100%;
